Fix zindex on mobile site closes #4

--- a/app/assets/stylesheets/mobile/header.css.sass
+++ b/app/assets/stylesheets/mobile/header.css.sass
@@ -13,3 +13,6 @@ header.ui-header
 
   .ui-btn-right
     right: 10px
+
+.ui-mobile, .ui-mobile .ui-page
+  background: transparent
